plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'key.emr.ittia'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.13.2'
    implementation 'org.xerial:sqlite-jdbc:3.51.1.0'
}

javafx {
    version = "25.0.1"
    modules = [ 'javafx.controls' ]
}

application {
    mainClass = 'key.emr.ittia.GeminiApp'
}

run {
    jvmArgs = ['--enable-native-access=javafx.graphics']
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    sourceCompatibility = '25'
    targetCompatibility = '25'
}
